--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,9 @@
-html,
+@import url('./fonts.css');
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-    overflow: hidden;
-  }
+  background-color: rgb(18, 17, 17);
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
 }
